fix: minor bug fix on translation subscribe button change: phone number and address

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -50,7 +50,7 @@
     "processBody": "Custom platforms and softwares"
   },
   "footer": {
-    "address": "Mercedes echenique street #9, Rivera del Sur building, Santo Domingo Mirador sur",
+    "address": "Arístides García Mella Street, #23-27, Santo Domingo",
     "we": "Us",
     "aboutUs": "About us",
     "mission": "Mission",
