--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -49,7 +49,7 @@
     "processBody": "Plataformas y programas personalizadas para nuestros clientes"
   },
   "footer": {
-    "address": "C/Mercedes echenique #9 Edificio Rivera del sur, Santo Domingo Mirador sur",
+    "address": "C/ Arístides García Mella 23-27, Santo Domingo",
     "we": "Nostros",
     "aboutUs": "Sobre Nosotros",
     "mission": "Misión",
