fix: general punctuation typos

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -39,7 +39,7 @@
   },
   "nav": {
     "home": "Inicio",
-    "about": "Nostros",
+    "about": "Nosotros",
     "solutions": "Soluciones",
     "statistics": "Estadísticas",
     "posts": "Publicaciones",
@@ -50,7 +50,7 @@
   },
   "footer": {
     "address": "C/ Arístides García Mella 23-27, Santo Domingo",
-    "we": "Nostros",
+    "we": "Nosotros",
     "aboutUs": "Sobre Nosotros",
     "mission": "Misión",
     "vision": "Visión",
