--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -44,9 +44,9 @@
     "statistics": "Estadísticas",
     "posts": "Publicaciones",
     "contact": "Contacto",
-    "analysisBody": "Soluciones y plataformas acorde a las necesidades de nuestros clientes",
-    "softwareBody": "Visualice nuestra línea de proceso",
-    "processBody": "Plataformas y programas personalizadas para nuestros clientes"
+    "analysisBody": "Soluciones y plataformas acorde a las necesidades de nuestros clientes.",
+    "softwareBody": "Visualice nuestra línea de proceso.",
+    "processBody": "Plataformas y programas personalizadas para nuestros clientes."
   },
   "footer": {
     "address": "C/ Arístides García Mella 23-27, Santo Domingo",
