add: responsive design to footer

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -63,7 +63,7 @@
     "home": "Inicio",
     "suscribe": "Suscribirse al boletín",
     "solutions": "Soluciones",
-    "analysis": "Análisis de dato",
+    "analysis": "Análisis de datos",
     "development": "Desarrollo de software",
     "process": "Línea de proceso",
     "posts": "Publicaciones",
