--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -22,7 +22,7 @@
     "booking": {
       "book": "¡Agenda",
       "appointment": "una cita con nosotros!",
-      "book-appt": "Agendar cita"
+      "book-appt": "¡Hablemos!"
     },
     "fields": {
       "name": "Nombre",
