--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -85,14 +85,14 @@
     "subTitle": "Mejores procesos, mejores decisiones. Productos hechos a la medida para nuestros clientes.",
     "analysis": "ANÁLISIS DE DATA",
     "analysisQuote": "\"LO QUE SE MIDE, SE CONTROLA\"",
-    "analysisBody": "Implementamos soluciones y plataformas las cuales ayudan a nuestros clientes a analizar de manera mas detallada su informacion, aumentando la calidad en la toma de decisiones.",
+    "analysisBody": "Soluciones que ayudan a nuestros clientes ampliar la comprension de su informacion, mejorando la toma de decisiones.",
     "dataAnlysis": "Análisis de datos",
     "certified": "Estamos certificados en:",
     "dataBase": "Base de datos",
     "workWith": "Trabajamos con:",
     "softwareDev": "DESARROLLO DE SOFTWARE",
     "softwareQuote": "\"EN LA ERA EN LA QUE VIVIMOS, LAS EMPRESAS QUE NO SE ADAPTEN ESTÁN DESTINADAS AL FRACASO\"",
-    "softwareBody": "Creamos plataformas y programas personalizadas para nuestros clientes con el fin de eficientizar procesos y reducir costos.",
+    "softwareBody": "Creamos plataformas y programas personalizadas para eficientizar procesos y reducir costos.",
     "techs": "Tecnologías",
     "processLine": "NUESTRA LÍNEA DE PROCESO"
   },
